[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mimo-referral-bot"
version = "1.0.0"
description = "Automated Xiaomi MiMo account creator with referral system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rafi Permana", email = "rafi@example.com"}
]
requires-python = ">=3.9"
keywords = ["mimo", "xiaomi", "referral", "automation", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "playwright>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/rapoii/mimo-referral-bot"
Repository = "https://github.com/rapoii/mimo-referral-bot"
Issues = "https://github.com/rapoii/mimo-referral-bot/issues"

[project.scripts]
mimo-bot = "mimo_creator:main"

[tool.setuptools]
py-modules = ["mimo_creator"]
